@@ -14,6 +14,17 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
+
+Refactor poisoning code.
+    server/time.c
+    server/ob_types.c
+    include/sproto.h
+    include/typesproto.h
+    types/poisoning/poisoning.c
+    types/legacy/process.c
+    types/Makefile.am
+Alex Schultz 2007-11-28
+
 Added support for compound item apply animations
     server/apply.c
 Yann Chachkoff (gros) 2007-11-25
